--- a/services.ipynb
+++ b/services.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 193,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -38,7 +38,7 @@
         "\n",
         "# Import dataset\n",
         "services = pd.read_csv(\n",
-        "    'Caracterización_de_punto_de_servicio_-_Aurora_Office_-_Ronda_2_-_all_versions_-_False_-_2023-10-26-22-21-20.csv', sep=';', index_col=False)\n",
+        "    'Caracterización_de_punto_de_servicio_-_Aurora_Office_-_Ronda_2_-_all_versions_-_False_-_2023-11-14-19-05-42.csv', sep=';', index_col=False)\n",
         "\n",
         "# Replace \"other in organizations\"\n",
         "services.loc[services['organizacionimplementadora'] == \"otra\",\n",
@@ -68,7 +68,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 194,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -151,7 +151,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 165,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -215,7 +215,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 166,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -352,7 +352,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 197,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
@@ -384,9 +384,23 @@
               "      <th>2023-10-23</th>\n",
               "      <th>2023-10-24</th>\n",
               "      <th>2023-10-26</th>\n",
+              "      <th>2023-11-01</th>\n",
+              "      <th>2023-11-02</th>\n",
+              "      <th>2023-11-03</th>\n",
+              "      <th>2023-11-06</th>\n",
+              "      <th>2023-11-07</th>\n",
+              "      <th>2023-11-08</th>\n",
+              "      <th>2023-11-10</th>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>encuesta</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
               "      <th></th>\n",
               "      <th></th>\n",
               "      <th></th>\n",
@@ -408,6 +422,13 @@
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>glenisyurleybarraganjaimes</th>\n",
@@ -415,6 +436,13 @@
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
               "      <td>1.0</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
@@ -430,6 +458,13 @@
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
               "      <td>1.0</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>luiscarlosmejiafallas</th>\n",
@@ -440,6 +475,31 @@
               "      <td>1.0</td>\n",
               "      <td>NaN</td>\n",
               "      <td>1.0</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>luisdavidcalderonpatino</th>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
               "    </tr>\n",
               "    <tr>\n",
@@ -452,15 +512,47 @@
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>otro</th>\n",
+              "      <th>mariacamilaarevalo</th>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
               "      <td>1.0</td>\n",
               "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>marianelavarela</th>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>2.0</td>\n",
+              "      <td>1.0</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
               "    </tr>\n",
@@ -470,6 +562,13 @@
               "      <td>NaN</td>\n",
               "      <td>1.0</td>\n",
               "      <td>1.0</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
@@ -485,12 +584,26 @@
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>valentinaalondramedinamedina</th>\n",
               "      <td>NaN</td>\n",
               "      <td>1.0</td>\n",
               "      <td>2.0</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
@@ -507,6 +620,13 @@
               "      <td>1.0</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -519,28 +639,62 @@
               "glenisyurleybarraganjaimes           NaN         NaN         NaN         1.0   \n",
               "luisamonserratsolisriveros           NaN         NaN         NaN         NaN   \n",
               "luiscarlosmejiafallas                NaN         NaN         NaN         NaN   \n",
+              "luisdavidcalderonpatino              NaN         NaN         NaN         NaN   \n",
               "luisricardosolermadrid               2.0         NaN         2.0         NaN   \n",
-              "otro                                 NaN         NaN         NaN         NaN   \n",
+              "mariacamilaarevalo                   NaN         NaN         NaN         NaN   \n",
+              "marianelavarela                      NaN         NaN         NaN         NaN   \n",
               "rosakatherinecasanovasilva           NaN         NaN         1.0         1.0   \n",
               "sheilacristinamunozchoque            NaN         1.0         NaN         1.0   \n",
               "valentinaalondramedinamedina         NaN         1.0         2.0         NaN   \n",
               "vivianamarcelacastroruiz             NaN         NaN         NaN         NaN   \n",
               "\n",
-              "fecha                         2023-10-20  2023-10-23  2023-10-24  2023-10-26  \n",
-              "encuesta                                                                      \n",
-              "andresmauricioclavijoabril           NaN         NaN         NaN         NaN  \n",
-              "glenisyurleybarraganjaimes           NaN         NaN         NaN         NaN  \n",
-              "luisamonserratsolisriveros           NaN         NaN         NaN         1.0  \n",
-              "luiscarlosmejiafallas                1.0         NaN         1.0         NaN  \n",
-              "luisricardosolermadrid               NaN         NaN         NaN         NaN  \n",
-              "otro                                 1.0         NaN         NaN         NaN  \n",
-              "rosakatherinecasanovasilva           NaN         NaN         NaN         NaN  \n",
-              "sheilacristinamunozchoque            NaN         NaN         NaN         NaN  \n",
-              "valentinaalondramedinamedina         NaN         NaN         NaN         NaN  \n",
-              "vivianamarcelacastroruiz             NaN         1.0         NaN         NaN  "
+              "fecha                         2023-10-20  2023-10-23  2023-10-24  2023-10-26  \\\n",
+              "encuesta                                                                       \n",
+              "andresmauricioclavijoabril           NaN         NaN         NaN         NaN   \n",
+              "glenisyurleybarraganjaimes           NaN         NaN         NaN         NaN   \n",
+              "luisamonserratsolisriveros           NaN         NaN         NaN         1.0   \n",
+              "luiscarlosmejiafallas                1.0         NaN         1.0         NaN   \n",
+              "luisdavidcalderonpatino              NaN         NaN         NaN         NaN   \n",
+              "luisricardosolermadrid               NaN         NaN         NaN         NaN   \n",
+              "mariacamilaarevalo                   1.0         NaN         NaN         NaN   \n",
+              "marianelavarela                      NaN         NaN         NaN         NaN   \n",
+              "rosakatherinecasanovasilva           NaN         NaN         NaN         NaN   \n",
+              "sheilacristinamunozchoque            NaN         NaN         NaN         NaN   \n",
+              "valentinaalondramedinamedina         NaN         NaN         NaN         NaN   \n",
+              "vivianamarcelacastroruiz             NaN         1.0         NaN         NaN   \n",
+              "\n",
+              "fecha                         2023-11-01  2023-11-02  2023-11-03  2023-11-06  \\\n",
+              "encuesta                                                                       \n",
+              "andresmauricioclavijoabril           NaN         NaN         NaN         NaN   \n",
+              "glenisyurleybarraganjaimes           NaN         NaN         NaN         NaN   \n",
+              "luisamonserratsolisriveros           NaN         NaN         NaN         NaN   \n",
+              "luiscarlosmejiafallas                NaN         NaN         NaN         NaN   \n",
+              "luisdavidcalderonpatino              NaN         NaN         1.0         NaN   \n",
+              "luisricardosolermadrid               NaN         NaN         NaN         NaN   \n",
+              "mariacamilaarevalo                   1.0         NaN         NaN         NaN   \n",
+              "marianelavarela                      NaN         1.0         NaN         2.0   \n",
+              "rosakatherinecasanovasilva           NaN         NaN         NaN         NaN   \n",
+              "sheilacristinamunozchoque            NaN         NaN         NaN         1.0   \n",
+              "valentinaalondramedinamedina         NaN         NaN         NaN         NaN   \n",
+              "vivianamarcelacastroruiz             NaN         NaN         NaN         NaN   \n",
+              "\n",
+              "fecha                         2023-11-07  2023-11-08  2023-11-10  \n",
+              "encuesta                                                          \n",
+              "andresmauricioclavijoabril           NaN         NaN         NaN  \n",
+              "glenisyurleybarraganjaimes           NaN         NaN         NaN  \n",
+              "luisamonserratsolisriveros           1.0         1.0         1.0  \n",
+              "luiscarlosmejiafallas                NaN         NaN         NaN  \n",
+              "luisdavidcalderonpatino              NaN         NaN         NaN  \n",
+              "luisricardosolermadrid               NaN         NaN         NaN  \n",
+              "mariacamilaarevalo                   NaN         1.0         NaN  \n",
+              "marianelavarela                      1.0         NaN         NaN  \n",
+              "rosakatherinecasanovasilva           NaN         NaN         NaN  \n",
+              "sheilacristinamunozchoque            NaN         NaN         NaN  \n",
+              "valentinaalondramedinamedina         NaN         NaN         NaN  \n",
+              "vivianamarcelacastroruiz             NaN         NaN         NaN  "
             ]
           },
-          "execution_count": 197,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -565,7 +719,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 215,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -576,7 +730,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 199,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -638,7 +792,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 200,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -649,7 +803,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 201,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -699,7 +853,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 202,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -780,7 +934,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 203,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -789,7 +943,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 204,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -879,7 +1033,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 205,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -897,7 +1051,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 206,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -917,7 +1071,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 208,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -926,7 +1080,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 209,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1597,7 +1751,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 214,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [
         {
@@ -1652,7 +1806,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.6"
+      "version": "3.11.4"
     },
     "orig_nbformat": 4
   },
