Country variable for filter

--- a/services.ipynb
+++ b/services.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 89,
+      "execution_count": 152,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -38,7 +38,7 @@
         "\n",
         "# Import dataset\n",
         "services = pd.read_csv(\n",
-        "    'Caracterización_de_punto_de_servicio_-_Aurora_Office_-_Ronda_2_-_all_versions_-_False_-_2023-11-27-22-34-00.csv', sep=';', index_col=False) #, encoding='latin-1'\n",
+        "    'Caracterización_de_punto_de_servicio_-_Aurora_Office_-_Ronda_2_-_all_versions_-_False_-_2023-11-28-13-59-47.csv', sep=';', index_col=False) \n",
         "\n",
         "# Replace \"other in organizations\"\n",
         "services.loc[services['organizacionimplementadora'] == \"otra\",\n",
@@ -65,7 +65,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 90,
+      "execution_count": 153,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -97,7 +97,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 91,
+      "execution_count": 154,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -125,7 +125,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 92,
+      "execution_count": 155,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -152,16 +152,17 @@
         "country_dict = {\n",
         "\"colombia\" : \"Colombia\",\n",
         "\"chile\" : \"Chile\",\n",
-        "\"panama\" : \"Panamá\",\n",
+        "\"panama\" : \"Panama\",\n",
         "\"costarica\" : \"Costa Rica\",\n",
         "}\n",
         "\n",
-        "services['pais'] = services['pais'].replace(country_dict)\n"
+        "services['pais'] = services['pais'].replace(country_dict)\n",
+        "\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 93,
+      "execution_count": 156,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -176,7 +177,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 94,
+      "execution_count": 157,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -231,7 +232,7 @@
         "    return df\n",
         "\n",
         "# Export to CVS\n",
-        "def exportToFile(df: DataFrame, fileType: str, exportName: str):\n",
+        "def exportToFile(df: DataFrame, fileType: str, exportName: str, encoding: str = 'utf-8'):\n",
         "    \"\"\" \n",
         "    df -> Pandas DataFrame object\n",
         "    fileType -> Either \"csv\" or \"json\"\n",
@@ -249,18 +250,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 95,
+      "execution_count": 158,
       "metadata": {},
       "outputs": [],
       "source": [
         "# parsing date field into unix timestamp\n",
         "services_carto[\"timeunix\"] = services_carto[\"fecha\"].apply(\n",
-        "    lambda x: toUnixTimestamp(time=x, format=\"%d/%m/%Y\"))"
+        "    lambda x: toUnixTimestamp(time=x, format=\"%Y-%m-%d\"))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 96,
+      "execution_count": 159,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -352,7 +353,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 97,
+      "execution_count": 160,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -361,7 +362,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 98,
+      "execution_count": 161,
       "metadata": {},
       "outputs": [
         {
