Services code for Carto

--- a/services.ipynb
+++ b/services.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 152,
+      "execution_count": 162,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -65,11 +65,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 153,
+      "execution_count": 163,
       "metadata": {},
       "outputs": [],
       "source": [
-        "#Rename categories\n",
+        "# keep the observations that were agreed with the informed consent \n",
+        "services=services[services['consentimiento'] != 'no'] "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 165,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#Rename the principal organizations\n",
         "principal_dict = {\n",
         "    \"hias\": \"Hias\",\n",
         "    \"worldvision\": \"World Vision\",\n",
@@ -87,7 +97,8 @@
         "    \"A titulo personal pero bajo figura de asociación de desarrollo\" : \"Asociación Local de Desarrollo\",\n",
         "    \"medicossinfronteras\" : \"Médicos sin Fronteras\",\n",
         "    \"Delegación presidencial - encargada social Yenderi Jaldin y de logística Franco Villalobos\" : \"Delegación Presidencial\",\n",
-        "    \"Simn\" : \"SIMN\"\n",
+        "    \"Simn\" : \"SIMN\",\n",
+        "    \"Delegación presidencial regional de Tarapaca (DPR)\" : \"Delegación Presidencial Regional de Tarapacá\"\n",
         "}\n",
         "\n",
         "\n",
@@ -97,11 +108,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 154,
+      "execution_count": 166,
       "metadata": {},
       "outputs": [],
       "source": [
-        "#Rename categories\n",
+        "#Rename the implementators \n",
         "implemen_dict = {\n",
         "    \"hias\": \"Hias\",\n",
         "    \"worldvision\": \"World Vision\",\n",
@@ -125,7 +136,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 155,
+      "execution_count": 167,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -162,7 +173,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 156,
+      "execution_count": 168,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -170,14 +181,15 @@
         "newColumns = loadLocalJsonDoc(\"defaults/rename_columns.json\")\n",
         "services_carto = services.rename(columns=newColumns)\n",
         "\n",
-        "# Dropping two variables related to final observations and scarce services\n",
+        "# Dropping two variables related to final observations and scarce services \n",
+        "# (they are not needed in Carto, they are important on other analysis)\n",
         "services_carto = services_carto.drop(\"observacion\", axis='columns')\n",
         "services_carto = services_carto.drop(\"serviciosescasos\", axis='columns')"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 157,
+      "execution_count": 169,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -189,7 +201,7 @@
         "    in_milliseconds = int(in_seconds) * 1000\n",
         "    return in_milliseconds\n",
         "\n",
-        "#Organize services in order to have them separated by | and same categories as in first round \n",
+        "#Organize services in order to have them separated by | and same categories of first round \n",
         "def codifyServices(value: str, values_dict: dict[str, int], otherValue: str):\n",
         "    if (type(value) == float or type(value) == int):\n",
         "        return otherValue\n",
@@ -250,7 +262,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 158,
+      "execution_count": 170,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -261,7 +273,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 159,
+      "execution_count": 171,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -353,7 +365,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 160,
+      "execution_count": 172,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -362,7 +374,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 161,
+      "execution_count": 173,
       "metadata": {},
       "outputs": [
         {
