--- a/services.ipynb
+++ b/services.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 162,
+      "execution_count": 174,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -65,7 +65,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 163,
+      "execution_count": 175,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -75,7 +75,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 165,
+      "execution_count": 176,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -89,7 +89,7 @@
         "    \"ayudaenaccion\": \"Ayuda en Acción\",\n",
         "    \"unicef\": \"Unicef\",\n",
         "    \"pastoralsocial\" : \"Pastoral Social\",\n",
-        "    \"acnur\" : \"ACNUR\",\n",
+        "    \"acnur\" : \"Acnur\",\n",
         "     \"oim\" : \"OIM\",\n",
         "    \"Sub secretaria de la niñez\" : \"Subsecretaría de la Niñez\",\n",
         "    \"consejonoruegopararefugiadosnrc\" : \"NRC\",\n",
@@ -108,7 +108,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 166,
+      "execution_count": 177,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -123,12 +123,14 @@
         "    \"unicef\": \"Unicef\",\n",
         "    \"pastoralsocial\" : \"Pastoral Social\",\n",
         "    \"Hogar de cristo\" : \"Hogar de Cristo\",\n",
-        "    \"acnur\" : \"ACNUR\",\n",
+        "    \"acnur\" : \"Acnur\",\n",
         "    \"Fundación grandes valores futbol mas\" : \"Fundación Futbol Más\",\n",
         "    \"retinternacional\" : \"RET Internacional\",\n",
         "    \"consejonoruegopararefugiadosnrc\" : \"NRC\",\n",
         "    \"globalbrigades\" : \"Global Brigades\",\n",
-        "    \"A titulo personal pero bajo figura de asociación de desarrollo\" : \"Asociación Local de Desarrollo\"\n",
+        "    \"A titulo personal pero bajo figura de asociación de desarrollo\" : \"Asociación Local de Desarrollo\",\n",
+        "    \"CIDEMOS\" : \"Cidemos\",\n",
+        "    \"hias otra\" : \"Hias\"\n",
         "}\n",
         "\n",
         "services['organizacionimplementadora'] = services['organizacionimplementadora'].replace(implemen_dict)"
@@ -136,7 +138,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 167,
+      "execution_count": 178,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -173,7 +175,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 168,
+      "execution_count": 179,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -181,7 +183,7 @@
         "newColumns = loadLocalJsonDoc(\"defaults/rename_columns.json\")\n",
         "services_carto = services.rename(columns=newColumns)\n",
         "\n",
-        "# Dropping two variables related to final observations and scarce services \n",
+        "# Dropping two text variables related to final observations and scarce services \n",
         "# (they are not needed in Carto, they are important on other analysis)\n",
         "services_carto = services_carto.drop(\"observacion\", axis='columns')\n",
         "services_carto = services_carto.drop(\"serviciosescasos\", axis='columns')"
@@ -189,7 +191,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 169,
+      "execution_count": 180,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -262,7 +264,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 170,
+      "execution_count": 181,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -273,7 +275,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 171,
+      "execution_count": 182,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -365,7 +367,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 172,
+      "execution_count": 183,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -374,7 +376,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 173,
+      "execution_count": 184,
       "metadata": {},
       "outputs": [
         {
